--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
   "name": "@hyperpolymath/polyglot-db-mcp",
   "version": "1.3.0",
-  "description": "Unified MCP server for multiple databases",
-  "license": "MIT",
+  "description": "Unified MCP server for 21 databases",
+  "license": "PMPL-1.0-or-later",
   "exports": "./server.js",
   "tasks": {
     "start": "deno run --allow-net --allow-read --allow-write --allow-env --unstable-kv server.js",
